# SocketHV

./: CMakeLists.txt  README.md
inc/: HVSocket.h
src/: HVSocket.cpp
test/: socketTest.cpp
